starter_code/stylesheets/style.css
/* Mobile First Styles */
/* Iteration 1 | Extra Small Screen (width < 768px) */

body {
    font-family: 'Font Awesome\ 5 Brands';
    font-weight: 400;
    font-size: 16px; 
}

/* Font settings */

h1 {
  font-size: 2.5rem;
}
  
h2 {
  font-size: 2.2rem;
}
    
p {
  font-size: 1.4rem;
}


/* NavTop Styles */

nav {
  border-bottom: 1px solid #5b5e6d;
  border-top: 1px solid #5b5e6d;
  position: sticky;
  z-index: 5;
  top: 0;
  background-color: #ffffff;
}

.flex-container {
    display: flex;
    width: 95vw;
    align-items: center;
    justify-content: center;
} 

nav > img {
    height: 50px;
    margin-left: 30px;
    padding: 10px 0;
}

nav ul li {
  display: inline-block;
  font-size: 10px; 
  /* Hidden element to improve better positions of it's siblings */
  visibility: hidden;
  color: #5b5e6d;
}

ul {
  list-style: none;
}

.fa-solid {
    color: #2C303F; 
    font-size: 30px;
    margin-right: 30px;
 /*   display: none;*/
}


/* Header Styles */

.flex-container-col {
  display: flex;
  flex-direction: column;
  width: 95vw;
  align-items: center;
  justify-content: center;
} 

header > h1{
  width: 80vw;
}

header > img{
  width: 80vw;
  padding-top: 40px;
}

p{
  width: 80vw;
}

/* header > button{ */
.buttonstyle{  
  width: 80vw;
  background-color: #192592;
  color: white;
  padding: 20px 30px;
  border: none;
  font-size: 1.2rem;
  border-radius: 5px;
  margin-top: 10px;
}

#email{
  width: 79vw;
  padding-top: 15px;
  padding-bottom: 15px;
  margin: 20px 0 15px 0;
}

input,
input::-webkit-input-placeholder {
    font-size: 10px;
    line-height: 2;
    font-size: 1.2rem;
    text-align: left;
}

#p-link{
  text-align: center;
  font-size: 1.4rem;
}

h1{
  margin-top: 40px;
  color: #2C303F; 
  font-weight: bold;
}

p{
  color: #5b5e6d;
  line-height: 1.3;
}

/* Main Styles */

h2{
  color: #2C303F; 
  margin-top: 50px;
}

main{
  width: 95vw;
}

main > div > img{
  height: 50px;
  padding: 40px;
}

main > div:first-child{
background-color: #F4F3F4;
}

main > div > img{
  height: 50px;
  padding: 40px;
}

.img-smallaer{
  height: 30px;
}

main > div > button{
  width: 80vw;
  background-color: white;
  color: #192592;
  padding: 20px 30px;
  border: 1px solid #192592;
  font-size: 1.2rem;
  border-radius: 5px;
  margin: 20px;
  font-weight: bold;
}

main > div > p{
  text-align: center;
  margin-top: 0px;
}

hr{
  margin: 20px auto 30px auto;
  width: 100%;
  border-right : 0;
  border-left: 0;
  border: 1px solid rgb(223, 223, 223);
}

#h2style{
  font-size: 1.7rem;
  font-weight: bold;
  margin-top: 50px;
}

.fstyle{
  font-size: 1.3rem;
  font-weight: bold;
  padding-top: 10px;
  color: grey;
}

.flex-container-col3 {
  display: flex;
  flex-direction: column;
  width: 95vw;
  align-items: center;
  align-content: center;
} 

/* Footer Styles */

.flex-containerr2 {
  display: flex;
  flex-wrap: wrap;
  width: 95vw;
} 

.flex-containerr2 > ul {
  width: 30%;
}

footer div ul {
  line-height: 2;
}

footer .flex-container4{
  background-color: #F4F3F4;
}

.flex-containec4{
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: 95vw;
}

.flex-container4 > ul{
 display: flex;
 justify-content: center;
}

.flex-container4 > ul li {
  font-size: 1.1rem;
  font-weight: bold;
  color: grey;
  padding: 0 10px;
}

#flatresize{
  height: 25px;
}

#foot-iconds{
  text-align: center;
}

.flex-container5 > span{
  padding: 15px;
  color: grey;
  font-size: 1.1rem;
 } 

.flex-container5 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

footer > img {
  height: 110px;
  margin-left: 10px;
}

.fab{
  padding: 12px;
}


/* Break Points */

/* Iteration 2 | Small Screen (961px > width > 767px) */
/* Media query will be invoked when resolutions is smaller than 962px and bigger than 766*/

@media (min-width: 767px) and (max-width: 961px) {
    body{
        background-color: pink;
    }
}

